--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Title</th>
-                                <th>Due Date</th>
-                                <th>Duration</th>
+                                <th><button class="sort-btn" data-key="title">Title ↕</button></th>
+                                <th><button class="sort-btn" data-key="dueDate">Due Date ↕</button></th>
+                                <th><button class="sort-btn" data-key="duration">Duration ↕</button></th>
                                 <th>Tag</th>
                                 <th>Actions</th>
                             </tr>
