Updating my html with the keyboard navigation accessibilities

--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
                 <h2 id="student-life-title">Life on Campus <i class="fa-solid fa-sun"></i></h2>
                 <img src="assets/studentlife.png" alt="Student life" class="student-life">
                 <div class="campus-info">
+
+                    <section id="keyboard-shortcuts" aria-labelledby="shortcuts-title">
+                        <h2 id="shortcuts-title">Keyboard Shortcuts <i class="fa-solid fa-keyboard"></i></h2>
+                        <ul class="shortcuts-list">
+                            <li><kbd>Alt</kbd> + <kbd>A</kbd> <span>Add Task</span></li>
+                            <li><kbd>Alt</kbd> + <kbd>D</kbd> <span>Dashboard</span></li>
+                            <li><kbd>Alt</kbd> + <kbd>T</kbd> <span>Tasks</span></li>
+                            <li><kbd>Alt</kbd> + <kbd>S</kbd> <span>Settings</span></li>
+                            <li><kbd>Alt</kbd> + <kbd>/</kbd> <span>Search</span></li>
+                        </ul>
+                    </section>
                     <p>Explore the vibrant campus life, clubs, social events, and more.</p>
                 </div>
             </section>
